--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:iPlWvF2izBpfj93cHZjkl+9YuGZ3Ed3Do0AY2sJSgzQ=
+APP_KEY=Enter your api key
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=assesment
-DB_USERNAME=zisad
-DB_PASSWORD=assesment@zisad
+DB_DATABASE=Enter your database name here
+DB_USERNAME=Enter your database user name
+DB_PASSWORD=Enter your database password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
