--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=Enter your api key
+APP_KEY=Enter_your_api_key_here
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=Enter your database name here
-DB_USERNAME=Enter your database user name
-DB_PASSWORD=Enter your database password
+DB_DATABASE=Enter_your_database_name_here
+DB_USERNAME=Enter_your_user_name_here
+DB_PASSWORD=Enter_your_password_here
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
