Default user information added

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+
+ADMIN_NAME=Zisad
+ADMIN_EMPLOYEE_ID=1234
+ADMIN_PASSWORD=112233
+ADMIN_DESIGNATION=Admin
+ADMIN_DOJ=01/01/2020
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
